--- a/test3/MainWindow.xaml
+++ b/test3/MainWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Title="{Binding MainWindow}" Height="450" Width="1150">
     <Grid>
-        <DataGrid ItemsSource="{Binding InfosTiers}" Margin="20,20,176,20" AutoGenerateColumns="False">
+        <DataGrid x:Name="Tab" ItemsSource="{Binding InfosTiers}" Margin="20,20,176,20" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Tier" Binding="{Binding TypeTier}" Width="50"/>
                 <DataGridTextColumn Header="Nom" Binding="{Binding Contact}" Width="100"/>
